# fastapi_mongodb-FAM

./: .gitignore  LICENSE  cookiecutter.json  main.py  pyproject.toml
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: login.py  user.py
app/config/logger/: main.py
app/config/logger/helper/: weekly_rotate.py
app/config/settings/: __init__.py  helper.py  main.py
app/config/settings/db/: mongo.py  postgres.py
app/config/settings/email/: main.py
app/core/: celery_app.py
app/core/security/: __init__.py  password.py  token.py  totp.py
app/crud/: base.py  crud_token.py  crud_user.py
app/db/: base.py  session.py
app/manager/: account.py
app/manager/helper/: converts.py
app/messages/api/: main.py
app/messages/code/: main.py
app/middleware/: correlation.py
app/middlewares/: correlation.py
app/models/: __init__.py  base.py
app/models/security/: token.py
app/models/user/: main.py
app/routes/: account.py  base.py
app/schemas/: __init__.py
app/schemas/error/: main.py
app/schemas/request/: email.py  token.py  totp.py  user.py
app/schemas/response/: main.py  pagination.py  result.py  sorting.py  token.py  totp.py  user.py  user_base.py
app/setup/: factory.py
app/setup/event/: main.py
app/setup/helper/: custom_exception.py  init_db.py  middleware.py  static.py
app/setup/helpers/: static.py
app/setup/route/: main.py
app/setup/routes/: main.py
app/utils/: __init__.py  cbv.py  types.py
app/utils/email/: main.py
app/workers/celery/: main.py
app/workers/sentry/: main.py
(+5 files in other folders)
